--- a/Lab19 Oprosnik/App.config
+++ b/Lab19 Oprosnik/App.config
@@ -3,9 +3,10 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
- 
+
   <connectionStrings>
     <add name="Survey" connectionString="Surveys.dat"></add>
+    <add name="Answer" connectionString="Answers.dat"></add>
 
     <add name="DefaultConnectionOpros" connectionString="Data Source=DIMONI414;Initial Catalog=OprosUserCollection;Integrated Security=True"
         providerName="System.Data.SqlClient" />
